[svn r32922] -JUnit 4 for raster -GEOT-2466 -some sparse clean up (more to do)